PyMaker/datas/object2/RawHTML/i7301/Python_DOC_referPages.why-do-evalbreak-and-evalcontinue-fail.txt
<div class="post-text" itemprop="text">
<p>I have a loop which runs until the user presses Ctrl+C.</p>
<p>The user is then asked to input y/n.</p>
<p>If the user presses <code>'y'</code>, then I do <code>eval('continue')</code>.</p>
<p>If the user presses <code>'n'</code>, then I do <code>eval('break')</code>.</p>
<pre><code>while True:
    try:
        ...
    except KeyboardInterrupt:
        ...
        options = {'y':'continue','n':'break'}
        while True:
            decision = raw_input('continue (y/n)?')
            if decision in options:
                break
        eval(options[decision])
</code></pre>
<p>When I press <code>'y'</code>, I get:</p>
<pre><code>    continue
           ^
SyntaxError: unexpected EOF while parsing
</code></pre>
<p>When I press <code>'n'</code>, I get:</p>
<pre><code>    break
           ^
SyntaxError: unexpected EOF while parsing
</code></pre>
<p>Can somebody please explain what am I missing here?</p>
</div>
<div class="post-text" itemprop="text">
<p><code>eval()</code> only evaluates <em>expressions</em>. <code>break</code> and <code>continue</code> are not expressions, they are <a href="https://docs.python.org/3/reference/simple_stmts.html" rel="nofollow noreferrer">(simple) statements</a>.</p>
<p>You can't run such statements from a variable here; the compiler needs to know <em>up front</em> where such statements are going to be used, because there are jump offsets involved in the bytecode. Just use <code>if</code> tests:</p>
<pre><code>if decision == 'y':
    continue
elif decision == 'n':
    break
</code></pre>
</div>
<span class="comment-copy"><a href="https://stackoverflow.com/questions/13851389/what-are-valid-statements-inside-a-python-eval" title="what are valid statements inside a python eval">stackoverflow.com/questions/13851389/…</a></span>
<span class="comment-copy">Thank you!!!!!!</span>
<span class="comment-copy">@goodvibration You can accept an answer if it helps. Click on the grey check on the left of the answer.</span>
<span class="comment-copy">@cᴏʟᴅsᴘᴇᴇᴅ: goodvibration is hardly new to SO and they asked and accepted questions before :-) The question is not yet 15 minutes old so they <i>can't</i> just yet.</span>
